# pydantic-env

./: README.md  pyproject.toml
src/pydantic_env/: __init__.py  parse.py
tests/pydantic_env/: test_parse.py
