[project]
name = "pydantic-env"
version = "0.2.0"
description = "Validate and structure env variables with pydantic."
authors = [
    {name = "extradosages", email = "extradosages.001@gmail.com"},
]
dependencies = [
    "pydantic>=2.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.9.1",
    "ruff>=0.0.289",
    "pytest>=7.4.2",
]
